--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ReactKotlin</string>
     <string name="open_react">Open React Native Activity</string>
+    <string name="native_title">Native</string>
+    <string name="react_native_title">React Native</string>
 </resources>
